Server/esp_server/build/log/idf_py_stderr_output_33679
Command: make -j 10 all
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: In function 'serverTask':
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:336:47: error: 'command' undeclared (first use in this function); did you mean 'command_len'?
  336 |         int command_len = recv(client_socket, command, sizeof(command) - 1, 0);
      |                                               ^~~~~~~
      |                                               command_len
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:336:47: note: each undeclared identifier is reported only once for each function it appears in
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:336:13: warning: variable 'command_len' set but not used [-Wunused-but-set-variable]
  336 |         int command_len = recv(client_socket, command, sizeof(command) - 1, 0);
      |             ^~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: At top level:
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:52:13: warning: 'wifi_init_sta' defined but not used [-Wunused-function]
   52 | static void wifi_init_sta() {
      |             ^~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:43:15: warning: 'write_buffer_index' defined but not used [-Wunused-variable]
   43 | static size_t write_buffer_index = 0;  // Current position in the write buffer
      |               ^~~~~~~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:42:16: warning: 'write_buffer' defined but not used [-Wunused-variable]
   42 | static uint8_t write_buffer[MAX_FILE_SIZE];  // Buffer for storing file data
      |                ^~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/esp_server.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5672: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
